# sx_training_fetch

./: .gitignore  Agents.md  README.md  fetch.ipynb  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
calratio_training_data/: __init__.py  combining.py  constants.py  cpp_xaod_utils.py  fetch.py  label_utils.py  processing.py  sx_utils.py  training_query.py  triggers.py
notebooks/: 000 - fetch.ipynb  002 - Understanding CalTopo.ipynb  003 - CalTopo Derivation Comparison.ipynb  004 - pv_derivation_tracks.ipynb  005 - Checking Lxy and Lz cuts.ipynb  005 - awkward-format-repro.ipynb  006 - Test PHYSLITE Combo.ipynb  006 - runit.py  007 - Triggers In File.ipynb  pv_derivation_tracks.ipynb
sx_training_fetch/: fetch.py
tests/: test___init__.py  test_fetch.py  test_processing.py  test_sx_utils.py  test_training_query.py
