[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calratio_training_data"
version = "0.1.0"
description = "A package for fetching calratio training data"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
dependencies = [
    "awkward",
    "pyarrow",
    "dask_awkward",
    "uproot",
    "func_adl_xAOD",
    # "git+https://github.com/gordonwatts/ServiceX-Local.git@feat/injection",
    # "git+https://github.com/ssl-hep/ServiceX_frontend.git@feat/register-backend",
    "func_adl_servicex_xaodr22",
    "servicex-cli",
    "servicex-analysis-utils"
]

[project.optional-dependencies]
dev = ["black", "typer"]

[project.scripts]
calratio_training_data = "calratio_training_data.fetch:run_from_command"

[tool.hatch.build.targets.sdist]
include = ["README.md", "/calratio_training_data"]

[tool.hatch.build.targets.wheel]
include = ["README.md", "/calratio_training_data"]
